# zap

./: .gitignore  Cargo.toml  LLM.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: zap_vs_grpc.rs
examples/: README.md
examples/go/: main.go
examples/python/: main.py
examples/rust/: main.rs
examples/schema/: chat.zap
examples/typescript/: main.ts
npm/: README.md  package.json
npm/scripts/: install.js
python/: README.md  pyproject.toml
python/src/hanzo_zap/: __init__.py  agent_consensus.py  client.py  crypto.py  error.py  identity.py  server.py
python/src/zap_schema/: __init__.py  config.py  gateway.py
python/tests/: __init__.py  conftest.py  test_agent_consensus.py  test_config.py  test_crypto.py  test_error.py  test_identity.py
reserve/zap-proto/: Cargo.toml  README.md
reserve/zap-proto-py/: README.md  pyproject.toml
reserve/zap-proto-py/src/zap_proto/: __init__.py
reserve/zap-protocol/: Cargo.toml  README.md
reserve/zap-protocol-py/: README.md  pyproject.toml
reserve/zap-protocol-py/src/zap_protocol/: __init__.py
reserve/zap-protocol/src/: lib.rs
schema/: addressbook.zap  zap.capnp  zap.zap
schema/rust/: zap.capnp
scripts/: publish-all.sh  size_comparison.sh
src/: agent_consensus.rs  client.rs  config.rs  consensus.rs  crypto.rs  error.rs  gateway.rs  identity.rs  lib.rs  schema.rs  server.rs  transport.rs
typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript/src/: agent_consensus.ts  client.ts  config.ts  crypto.ts  error.ts  gateway.ts  identity.ts  index.ts  lux_consensus.ts  server.ts  types.ts
typescript/tests/: agent_consensus.test.ts  config.test.ts  error.test.ts  identity.test.ts
