[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zap-proto"
version = "1.0.0"
description = "ZAP - Zero-copy Application Protocol for AI agent communication. See zap-schema for the main package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hanzo AI", email = "dev@hanzo.ai" }
]
keywords = ["zap", "rpc", "capnproto", "mcp", "ai-agents", "protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = [
    "zap-schema>=1.0.0",
]

[project.urls]
Homepage = "https://zap-proto.github.io/zap"
Documentation = "https://zap-proto.github.io/zap"
Repository = "https://github.com/zap-proto/zap"
